# requirement-estimation

./: .dockerignore  .env.backend.example  .env.example  .env.frontend.example  .gitignore  .uvrc.example  AGENTS.md  AGENTS.md.template  CLAUDE.md  CODEBUDDY.md  DEPLOYMENT.md  DOCKER_DEPLOY_GUIDE.md  Dockerfile  Dockerfile.internal  ENTRYPOINT_VERIFICATION.md  MIGRATION_TO_UV_LOCK.md  Makefile  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_START.md  README.md  REQUIREMENTS_TXT_DEPRECATION.md  SYSTEM_LIST_README.md  UPGRADE_20260107.md  UV_QUICK_REFERENCE.md  UV_VS_PIP_EXPLAINED.md  aicoding.config.yaml  check_dependencies.sh  deploy-all.sh  deploy-backend-internal.sh  deploy-backend.sh  deploy-frontend-internal.sh  deploy-frontend.sh  deploy-internal-from-github-zip.sh  deploy-milvus-remote.sh  deploy-milvus.sh  deploy-remote-all.sh  deploy.sh  deployment.md  design.md  (+25 more)
.aicoding/: AGENTS.md.template  STRUCTURE.md  WALKTHROUGH_REPORT.md  advice.md  advice_v2.md  ai_workflow.md  aicoding.config.yaml  best_practices.md  discuss.md  enhance.md  enhance_temp.md  enhance_v1.md  enhance_v2.md  enr_claude.md  help.md  hooks.md  hooks_implementation_reference.md  hooks_implementation_reference_old.md  lessons_learned.md  manu.md  prop_claude.md  side-effects-analysis.md  suggest.md  worry.md
backend/: app.py  requirements.txt  subsystem_list.csv  system_list.csv
deploy/: Dockerfile  docker-compose.yml
docs/: lessons_learned.md  内网私有化部署手册-傻瓜版.md  开发手册.md  技术方案设计.md  接口文档.md  测试用例.md  用户手册.md  系统功能说明书.md  部署手册.md  部署记录.md  附件三：需求变更申请表-支付中台系统配合新核心收付费流程改造需求 .docx  项目说明.md
frontend/: Dockerfile  Dockerfile.internal  nginx-remote.conf  nginx.conf  nginx.internal.conf  package-lock.json  package.json
metachange_inform/: config.yaml  metachange_inform.py
reviews/: design-review.yaml  implementation-review.yaml  requirements-review.yaml
scripts/: ai_smoke_test.py  api_regression.sh  cleanup_v27_profile_assets.py  init_internal_users.py  integration_smoke.py  knowledge_acceptance.py  paginate_requirements.py  prepare_v4_samples.py  run_v4_pilot_demo.py
tests/: locustfile.py  test_agent_orchestrator.py  test_api_regression.py  test_attachment_extraction.py  test_backend_config_env_files.py  test_backend_security_headers.py  test_cleanup_v27.py  test_code_scan_api.py  test_code_scan_skill_v27.py  test_dashboard_metrics_v21.py  test_dashboard_query_api.py  test_deploy_backend_internal_script.py  test_deploy_backend_script.py  test_deploy_frontend_internal_script.py  test_deploy_internal_zip_script.py  test_docker_build_uv_network_tuning.py  test_document_parser.py  test_document_skill_adapter_quality.py  test_docx_parser.py  (+54 more)
(+525 files in other folders)
